--- a/application/admin/view/layout.html
+++ b/application/admin/view/layout.html
@@ -467,6 +467,25 @@
 {/notempty}
 
 <script>
+    //左侧导航
+    $(document).on('click', 'a', function(e) {
+        let token = localStorage.getItem('token');
+        let urlToken ='';
+        var queryString =window.location.search;
+        var href = $(this).attr('href');
+        var params = new URLSearchParams(queryString);
+        urlToken = params.get('token'); 
+        if (urlToken) {
+            token = urlToken;
+            localStorage.setItem('token', token);
+        }
+        if (!$(this).hasClass('top-menu') && !$(this).hasClass('ajax-get') && !$(this).hasClass('ajax-post') && !$(this).hasClass('js-get'))  {
+            e.preventDefault();
+            if (token) {
+                window.location.href =  href+"?token="+token;
+            }
+        }
+    });
     jQuery(function () {
         // 切换角色
         $('#js-change-role').click(function () {
