--- a/application/api/view/position_document/index.html
+++ b/application/api/view/position_document/index.html
@@ -185,6 +185,8 @@
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             min-height: 300px;
+            padding-left: 10%;
+            padding-right: 10%;
         }
         .document-title {
             font-size: 36px;
@@ -246,7 +248,7 @@
         }
 
         .document-content img {
-            width: 70% !important;  /* 覆盖富文本内联样式 */
+            width: 100% !important;  /* 覆盖富文本内联样式 */
             height: auto !important;
         }
         /*
